<resources>
    <string name="app_name">FarmersClub</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="text_or">OR</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_telephone">Telephone</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="surname">Surname:</string>
    <string name="name">Name:</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="telephone">Telephone:</string>
    <string name="action_saveprofile">Save</string>
    <string name="title_activity_join_group">Join Group</string>
    <string name="prompt_croptype">Crop Type</string>
    <string name="prompt_location">Enter Location</string>
    <string name="action_searchgroups">Search</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="prompt_groupname">Enter Group Name</string>
    <string name="prompt_groupdescription">Enter brief group description</string>
    <string name="action_savegroup">Create Group</string>
    <string-array name="usertype">
        <item>Farmer</item>
        <item>Expert</item>
    </string-array>
    <string name="title_activity_main">Farmers Club</string>
    <string name="title_activity_farm">My Farm</string>
    <string name="prompt_farmname">Enter Farm Name</string>
    <string name="prompt_farmdesc">Enter Farm Description</string>
    <string name="title_view_farms_activity">My Farms</string>
</resources>
