<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.janet.farmersclub.FarmActivity"
    tools:showIn="@layout/activity_farm"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/farm_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/farmname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_farmname"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/farmdesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_farmdesc"
                    android:inputType="text|textImeMultiLine"
                    android:maxLines="5"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_location"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please tick the crops you grow."/>


            <CheckBox
                android:id="@+id/tomato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tomatoes"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/carrot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carrots"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/cabbage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cabbages"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/potato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Potatoes"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/maize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Maize"
                android:onClick="onCheckboxClicked" />

            <Button
                android:id="@+id/savefarm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save Farm"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
